# skyrim-lights-menu

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  PCH.h  README.md  plugin.cpp  vcpkg.json
Skyrim/Data/: SkyrimLightsMenu.esp
Skyrim/Data/Interface/Translations/: SkyrimLightsMenu_ENGLISH.txt
Skyrim/Data/MCM/Config/SkyrimLightsMenu/: config.json  settings.ini
Skyrim/Data/SKSE/: SkyrimLightsMenuPresets.json
cmake/: Version.h.in  Version.rc.in
include/: SkyrimLightsMenu.hpp  hooks.hpp  imguiUtil.hpp  inputManager.hpp  lightType.hpp  logger.hpp  palette.hpp  prop.hpp  renderer.hpp  scene.hpp  serialization.hpp  util.hpp
src/: PCH.cpp  SkyrimLightsMenu.cpp  hooks.cpp  inputManager.cpp  lightType.cpp  logger.cpp  palette.cpp  prop.cpp  renderer.cpp  scene.cpp  serialization.cpp
